@@ -51,12 +51,9 @@ Committed:
     * Dean's [PATCH] two bugs in mod_autoindex
     * Igor Tatarinov's Re: A tiny correction and a question on writev_it_all
     * Dean's [PATCH] more useful warning message for fcntl() lock failure
+    * Dean's [PATCH] ap_snprintf should be more sane (fwd)
 
 Available:
-
-    * Dean's [PATCH] ap_snprintf should be more sane (fwd)
-	<Pine.LNX.3.95dg3.971222173805.697D-100000@twinlark.arctic.org>
-	Status: Dean +1, Jim +1, Ken +1
 
     * Dean's [PATCH] Re: [BUGFIXES] Wrong GID for PID file and UMASK for logs
 	<Pine.LNX.3.95dg3.971216000231.213J-100000@twinlark.arctic.org>
